# inlp

./: .gitignore  README.md  notebook_utils.py  pyproject.toml
.github/workflows/: ci.yml
01_data_collection/: README.md  pyproject.toml
01_data_collection/notebooks/: 01_scraping_anpc.ipynb  01_scraping_anpc.py
01_data_collection/scrapers/: __init__.py  anpc_scraper.py  anpc_scraper_selenium.py
01_data_collection/tests/: test_anpc_scraper.py  test_anpc_scraper_e2e.py
02_data_preprocessing/: README.md  pyproject.toml
02_data_preprocessing/notebooks/: 01_preprocessing.ipynb  01_preprocessing.py  02_preprocessing.ipynb  02_preprocessing.py  02_preprocessing_walkthrough.ipynb  02_preprocessing_walkthrough.py
02_data_preprocessing/preprocessing/: cleaner.py  nlp_pipeline.py  process_dataset.py
02_data_preprocessing/tests/: test_cleaner.py  test_nlp_pipeline.py
03_exploratory_data_analysis/: README.md  pyproject.toml
03_exploratory_data_analysis/analysis/: clustering.py  date_utils.py  topic_modeling.py
03_exploratory_data_analysis/notebooks/: 01_eda_anpc.ipynb  01_eda_anpc.py  03_eda_anpc.ipynb  03_eda_anpc.py
03_exploratory_data_analysis/tests/: test_analysis.py  test_date_utils.py
04_word_representations/: README.md  explore_data.py  pyproject.toml  utils.py
04_word_representations/notebooks/: 01_sparse_representations.ipynb  01_sparse_representations.py  02_dense_representations.ipynb  02_dense_representations.py  03_contextual_representations.ipynb  03_contextual_representations.py  04_sparse_representations.ipynb  04_sparse_representations.py  05_dense_representations.ipynb  05_dense_representations.py  06_contextual_representations.ipynb  06_contextual_representations.py
04_word_representations/representations/: bm25.py  bow.py  embeddings.py  tfidf.py
04_word_representations/tasks/: authorship.py  keyword_extraction.py  recommender.py  search_engine.py  seasonal_analysis.py
04_word_representations/tests/: test_embeddings.py  test_new_tasks.py  test_representations.py  test_tasks.py
05_morphological_analysis/: README.md  pyproject.toml
05_morphological_analysis/morphology/: utils.py
05_morphological_analysis/notebooks/: 01_morphology_and_wordnet.ipynb  01_morphology_and_wordnet.py  07_morphology_and_wordnet.ipynb  07_morphology_and_wordnet.py
05_morphological_analysis/tests/: test_morphology.py
06_transformers/: README.md  pyproject.toml  utils.py
06_transformers/notebooks/: 01_transformers_applications.ipynb  01_transformers_applications.py  08_transformers_applications.ipynb  08_transformers_applications.py
06_transformers/tests/: test_transformers_loading.py
07_llms/: README.md  pyproject.toml
07_llms/notebooks/: 01_llms.ipynb  01_llms.py
08_explainability/: README.md  pyproject.toml
08_explainability/explainability/: __init__.py  attention_viz.py
08_explainability/notebooks/: 01_explainability_and_interpretability.ipynb  01_explainability_and_interpretability.py
09_explainability/: README.md  pyproject.toml
09_explainability/explainability/: attention_viz.py  feature_importance.py  lime_explainer.py  shap_explainer.py  utils.py
09_explainability/notebooks/: 09_explainability_and_interpretability.ipynb  09_explainability_and_interpretability.py
09_explainability/tests/: test_explainability.py
