[project]
name = "romanian-nlp-lab"
version = "0.1.0"
description = "A collection of modules for Romanian NLP"
requires-python = "~=3.12.0"
dependencies = [
    "ipykernel>=7.1.0",
    "scipy-stubs~=1.16.3",
    "pandas",
    "scikit-learn",
    "statsmodels>=0.14.6",
    "01-data-collection",
    "02-data-preprocessing",
    "03-exploratory-data-analysis",
    "04_word_representations",
    "05-morphological-analysis",
    "06_transformers",
    "07-llms",
    "08_explainability",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

[tool.uv.workspace]
members = [
    "01_data_collection",
    "02_data_preprocessing",
    "03_exploratory_data_analysis",
    "04_word_representations",
    "05_morphological_analysis",
    "06_transformers",
    "07_llms",
    "08_explainability",
]

[tool.uv.sources]
01-data-collection = { workspace = true }
02-data-preprocessing = { workspace = true }
03-exploratory-data-analysis = { workspace = true }
04_word_representations = { workspace = true }
05-morphological-analysis = { workspace = true }
06_transformers = { workspace = true }
07-llms = { workspace = true }
08_explainability = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "01_data_collection",
    "02_data_preprocessing",
    "03_exploratory_data_analysis",
    "04_word_representations",
    "05_morphological_analysis",
    "06_transformers",
    "07_llms",
    "08_explainability",
]
pythonpath = [
    ".",
    "01_data_collection",
    "02_data_preprocessing",
    "03_exploratory_data_analysis",
    "04_word_representations",
    "05_morphological_analysis",
    "06_transformers",
    "07_llms",
    "08_explainability",
]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "**/anpc_scraper_selenium.py",
    "**/tests/**",
]
