[project]
name = "02-data-preprocessing"
version = "0.1.0"
description = "Module 02: Data Preprocessing - Cleaning and normalizing Romanian text"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "stanza>=1.6.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "dateparser>=1.2.0",
    "cleantext>=1.1.0",
    "unidecode>=1.3.0",
    "pip>=25.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupytext>=1.15.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.jupytext]
formats = "notebooks///ipynb,notebooks///py:percent"
