[project]
name = "03-exploratory-data-analysis"
version = "0.1.0"
description = "Exploratory Data Analysis and Topic Modeling for ANPC press releases"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "pandas>=2.2.3",
    "wordcloud>=1.9.4",
    "scikit-learn>=1.6.0",
    "dateparser>=1.2.0",
    "plotly>=5.24.1",
    "calplot>=0.1.7",
    "rank-bm25>=0.2.2",
    "jupytext>=1.16.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
