[project]
name = "04_word_representations"
version = "0.1.0"
description = "Word Representations module for Romanian NLP"
dependencies = [
    "pandas",
    "scikit-learn",
    "rank_bm25",
    "matplotlib",
    "seaborn",
    "wordcloud",
    "gensim",
    "umap-learn",
    "adjustText",
    "transformers",
    "torch",
    "requests",
    "statsmodels>=0.14.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]


[tool.setuptools.packages.find]
include = ["representations*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
