[project]
name = "05-morphological-analysis"
version = "0.1.0"
description = "Module 05: Morphological Analysis and WordNet - Exploring POS, NER, and semantic relations in Romanian"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "spacy>=3.7.0",
    "rowordnet>=0.5.0",
    "nltk>=3.8.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "adjustText>=1.1.1",
    "wordcloud>=1.9.3",
    "ro_core_news_sm @ https://github.com/explosion/spacy-models/releases/download/ro_core_news_sm-3.8.0/ro_core_news_sm-3.8.0-py3-none-any.whl",
    "ipython>=9.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "jupytext>=1.15.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.jupytext]
formats = "notebooks///ipynb,notebooks///py:percent"

